# scout

./: .gitignore  AGENTS.md  README.md
.opencode/rules/: prd-guidelines-en.md  rust-guidelines.md  typescript-guidelines.md
app_notes/: .gitignore  ARCHITECTURE.md  CROSS_PLATFORM_TESTING.md  F13_F14_IMPLEMENTATION_REPORT.md  F20_F21_SUMMARY.md  FFI_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  PACKAGING.md  PRD.md  QUICK_START.md  README.md  README_FLUTTER.md  ROADMAP.md  SPRINT1_CHECKLIST.md  TASKS.md  analysis_options.yaml  pubspec.yaml
app_notes/lib/: app.dart  main.dart
app_notes/lib/models/: app_settings.dart  cursor_position.dart  file_entry.dart  models.dart  open_file.dart  workspace.dart
app_notes/lib/services/: file_picker_service.dart  file_service.dart  rust_service.dart  rust_service_provider.dart  services.dart  settings_service.dart
app_notes/lib/state/: app_state.dart  editor_state.dart  preview_state.dart  save_status.dart  search_state.dart  state.dart  workspace_state.dart
app_notes/lib/ui/layout/: editor_area.dart  layout.dart  main_layout.dart  sidebar.dart  status_bar.dart  window_title_bar.dart
app_notes/lib/ui/shortcuts/: global_shortcuts.dart
app_notes/lib/ui/widgets/: file_tree_view.dart  find_box.dart  markdown_editor.dart  markdown_preview.dart  syntax_highlight_themes.dart  widgets.dart
app_notes/linux/: appnotes.desktop
app_notes/linux/runner/: my_application.cc
app_notes/macos/Runner.xcodeproj/: project.pbxproj
app_notes/rust/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  flutter_rust_bridge.yaml
app_notes/rust/src/: api.rs  error.rs  file_service.rs  lib.rs  markdown.rs  watcher.rs
app_notes/scripts/: build.sh  package.sh  test.sh
app_notes/test/: editor_area_test.dart  markdown_editor_test.dart  markdown_preview_test.dart  models_test.dart  save_status_test.dart  search_test.dart  state_test.dart  widget_test.dart
app_notes/test/integration/: editor_state_debug_test.dart  sprint1_diagnostic_test.dart  sprint1_test.dart
app_notes/test/services/: file_picker_service_test.dart  file_service_test.dart  rust_service_test.dart  settings_service_test.dart
app_notes/test/ui/: file_tree_view_test.dart  keyboard_shortcuts_test.dart  sidebar_test.dart  status_bar_test.dart
c_cpp/: .clang-format
c_cpp/rope/: CMakeLists.txt  DEPENDENCY_FRAMEWORK_SUMMARY.md  README.md
c_cpp/rope/doc/: README.md
c_cpp/rope/examples/: CMakeLists.txt  basic_usage.cpp  dependency_example.cpp  simple_test.cpp
c_cpp/rope/include/rope/: component.h  dependency_manager.h  rope.h  rope_export.h
c_cpp/rope/src/: dependency.cpp  dependency_manager.cpp  rope.cpp
c_cpp/rope/tests/: CMakeLists.txt  simple_test.cpp  test_dependency_manager.cpp  test_rope.cpp
c_cpp/rt_arch/: CMakeLists.txt
c_cpp/rt_arch/common/include/: com_event.h  com_event_dispatcher.h  com_event_mechanism.h  com_event_queue.h  com_event_router.h  com_ring_buffer.h
c_cpp/rt_arch/common/src/: com_event_mechanism.c  com_ring_buffer.c
design/rust_microkernel/: MULTILANG_DEVELOPMENT_PLAN.md  MULTILANG_FRAMEWORK_SUMMARY.md  osgi_compliant_framework.md  osgi_compliant_framework_multilang.md  osgi_compliant_framework_zh.md  plugin_framework.md
flutter/01.demo/: pubspec.yaml
latex/: .gitignore
latex/01.demo/: demo.tex
llm_espace/rules/: color-guidelines.md  figma-guidelines.md  flutter-guidelines.md  prd-guidelines-zh.md  test-case-guidelines.md  uml-guidelines.md
markdown/01.llm_records/: 20260125.rust.di.md
markdown/02.train_grid/: README-slide.md  README.md  convert-to-pdf.sh  export-drawio-images.sh  package.json  电网基础知识培训-slide.md  电网基础知识培训.drawio  电网基础知识培训.md
notebooks/: .gitignore
notebooks/00-odds/: 01-wrapper.ipynb  02-can-setting.ipynb
notebooks/01-bluesky/: 01-bluesky-tutorial.ipynb
notebooks/02-quantum-computing/: 01-temperature.ipynb  02-metal-test01.ipynb  02-metal-test01.py  03-hybrid-circuit.ipynb
notebooks/03-pytorch/: 00-verify-env.ipynb  01-preliminaries.ipynb  02-basic.ipynb  03-linear-regression.ipynb  04-lenet.ipynb  05-attention.ipynb  06-rnn.ipynb  README.md
notebooks/04-agentic_ai/: 01.langchain.ipynb  01.prompt-chain.ipynb  02.router.ipynb  03.parallel.ipynb  04.reflection.ipynb  05.tools.ipynb  06.plan.ipynb
qt/: .gitignore
qt/Decoration/: CMakeLists.txt  Decoration_en_US.ts  main.cpp
qt/demo01/: CMakeLists.txt  QtDemo01_en_US.ts  QtDemo01_fr.ts  debug.bat  mainwindow.cpp  mainwindow.h  mainwindow.ui
rust/chain/: Cargo.toml  README.md
rust/chain/src/: lib.rs  main.rs
rust/chain/src/bundle/: mod.rs
rust/chain/src/core/: bundle.rs  error.rs  manifest.rs  mod.rs  types.rs
rust/chain/src/language/: mod.rs  rust.rs
rust/chain/src/marshaling/: mod.rs
rust/chain/src/security/: mod.rs
rust/chain/src/service/: mod.rs
rust/cmp01/: Cargo.toml
rust/cmp01/examples/: counter.rs  generic.rs  methods_traits.rs
rust/cmp01/src/: main.rs
rust/embedded-demo01/: memory.x
rust/embedded_demo01/: Cargo.toml  memory.x
rust/embedded_demo02/: Cargo.toml  README.md  memory.x  rtos_info.md  setup.sh
rust/embedded_demo02/.cargo/: config.toml
rust/embedded_demo02/qemu_demo/: .gitignore  Cargo.toml  memory.x
rust/embedded_demo02/qemu_demo/.cargo/: config.toml
rust/embedded_demo02/qemu_demo/src/: link.x  main_backup.rs  main_simple.rs
rust/embedded_demo02/src/: link.x  main.rs
rust/rocket_demo01/: Cargo.toml
rust/rocket_demo01/src/: lib.rs  main.rs  services.rs
rust/rocket_demo01/src/services/: hit_count.rs  task.rs  tests.rs  util.rs
rust/rocket_demo01/static/: about.txt  upload.txt
vue/vue_demo/: README.md  package-lock.json  package.json
