[package]
name = "app_notes_rust"
version = "0.1.0"
edition = "2021"
authors = ["H. Zhou"]
description = "Rust backend for Markdown notes desktop application"
license = "MIT"
repository = "https://github.com/hzhou/app_notes"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "2.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.10"
notify = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[features]
default = []
test-helpers = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
