[package]
name = "chain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies for OSGi framework
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "5.0"

# For dynamic library loading
libloading = "0.8"

# For data marshaling
bincode = "1.3"
ciborium = "0.2"  # Modern CBOR implementation
rmp = "0.8"  # MessagePack
rmp-serde = "1.1"

# Logging
log = "0.4"
env_logger = "0.10"

# For manifest parsing
toml = "0.8"

# Async support (for future extensions)
tokio = { version = "1.0", features = ["full"] }

# For Python integration (will be added in later steps)
# pyo3 = { version = "0.20", features = ["auto-initialize"] }

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"
