[package]
name = "stm32f407-rtic-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
panic-halt = "0.2"
embedded-hal = "1.0"

[dependencies.stm32f4]
version = "0.15"
features = ["rt", "stm32f407"]

[dependencies.stm32f4xx-hal]
version = "0.20"
features = ["stm32f407"]

[dev-dependencies]
probe-rs = "0.24"

[[bin]]
name = "stm32f407-rtic-demo"
test = false
bench = false

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = true
