[package]
name = "qemu-stm32f407"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
panic-halt = "0.2"
embedded-hal = "1.0"

[dependencies.stm32f4]
version = "0.15"
features = ["rt", "stm32f407"]

[dependencies.stm32f4xx-hal]
version = "0.20"
features = ["stm32f407"]


[[bin]]
name = "qemu-stm32f407"
test = false
bench = false


[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
